tests/ui/async-await/unnecessary-await.stderr
error[E0277]: `()` is not a future
  --> $DIR/unnecessary-await.rs:9:11
   |
LL |     boo().await;
   |     ----- ^^^^^ `()` is not a future
   |     |
   |     this call returns `()`
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
   = note: required for `()` to implement `IntoFuture`
help: remove the `.await`
   |
LL -     boo().await;
LL +     boo();
   |
help: alternatively, consider making `fn boo` asynchronous
   |
LL | async fn boo() {}
   | +++++

error[E0277]: `()` is not a future
  --> $DIR/unnecessary-await.rs:28:10
   |
LL |     e!().await;
   |          ^^^^^ `()` is not a future
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
   = note: required for `()` to implement `IntoFuture`
help: remove the `.await`
   |
LL -     e!().await;
LL +     e!();
   |

error[E0277]: `()` is not a future
  --> $DIR/unnecessary-await.rs:22:15
   |
LL |         $expr.await
   |               ^^^^^
   |               |
   |               `()` is not a future
   |               remove the `.await`
...
LL |     f!(());
   |     ------ in this macro invocation
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
   = note: required for `()` to implement `IntoFuture`
   = note: this error originates in the macro `f` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `()` is not a future
  --> $DIR/unnecessary-await.rs:36:20
   |
LL |     for x in [] {}.await
   |                    ^^^^^ `()` is not a future
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
   = note: required for `()` to implement `IntoFuture`
help: remove the `.await`
   |
LL -     for x in [] {}.await
LL +     for x in [] {}
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
